--- a/.github/workflows/azure_deploy.yml
+++ b/.github/workflows/azure_deploy.yml
@@ -18,6 +18,7 @@ jobs:
         pip install fastapi
         pip install uvicorn
         pip install httpx
+        pip install beautifulsoup4
     
     - uses: actions/checkout@v4
 
