correctif test pip install openai

--- a/.github/workflows/azure_deploy.yml
+++ b/.github/workflows/azure_deploy.yml
@@ -19,6 +19,7 @@ jobs:
         pip install uvicorn
         pip install httpx
         pip install beautifulsoup4
+        pip install openai
     
     - uses: actions/checkout@v4
 
