--- a/.github/workflows/azure_deploy.yml
+++ b/.github/workflows/azure_deploy.yml
@@ -20,6 +20,7 @@ jobs:
         pip install httpx
         pip install beautifulsoup4
         pip install openai
+        pip install fitz
     
     - uses: actions/checkout@v4
 
