--- a/.github/workflows/azure_deploy.yml
+++ b/.github/workflows/azure_deploy.yml
@@ -21,6 +21,7 @@ jobs:
         pip install beautifulsoup4
         pip install openai
         pip install fitz
+        pip install PyMuPDF
     
     - uses: actions/checkout@v4
 
