rajout --no-cache-dir

--- a/back/Dockerfile
+++ b/back/Dockerfile
@@ -6,9 +6,8 @@ WORKDIR /app
 
 COPY requirements.txt .
 
-# The requirements.txt file is small so we could write the dependencies
-# directly, like `pip install --no-cache-dir fastapi ...`
-RUN pip install --upgrade pip && pip install -r requirements.txt
+RUN pip install --upgrade pip && \
+    pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 # Note that we copy the file requirements.txt twice. The reason is,
