--- a/back/Dockerfile
+++ b/back/Dockerfile
@@ -2,6 +2,18 @@
 # considerably slow the install process
 FROM python:3.11-slim
 
+# Installation des dépendances système pour PyMuPDF
+RUN apt-get update && apt-get install -y \
+    build-essential \
+    libx11-dev \
+    libxtst-dev \
+    libjpeg-dev \
+    libpng-dev \
+    zlib1g-dev \
+    libffi-dev \
+    poppler-utils \
+    pkg-config
+
 WORKDIR /app
 
 COPY requirements.txt .
