--- a/back/Dockerfile
+++ b/back/Dockerfile
@@ -6,8 +6,7 @@ WORKDIR /app
 
 COPY requirements.txt .
 
-RUN pip install --upgrade pip && \
-    pip install --no-cache-dir -r requirements.txt
+RUN pip install --upgrade pip && pip install -r requirements.txt
 
 COPY . .
 # Note that we copy the file requirements.txt twice. The reason is,
