--- a/deploy-aci-prod.yaml
+++ b/deploy-aci-prod.yaml
@@ -14,7 +14,7 @@ properties:
   containers:
   - name: pauline-front-portfolio
     properties:
-      image: paulineregistreb15.azurecr.io/front-portfolio-az-dev:latest
+      image: paulineregistreb15.azurecr.io/front-portfolio-az:latest
       resources:
         requests:
           cpu: 1
@@ -23,7 +23,7 @@ properties:
       - port: 80
   - name: pauline-back-chat
     properties:
-      image: paulineregistreb15.azurecr.io/back-chat-az-dev:latest
+      image: paulineregistreb15.azurecr.io/back-chat-az:latest
       ports:
       - port: 8000
       resources:
@@ -33,12 +33,12 @@ properties:
   osType: Linux
   ipAddress:
     type: Public
-    dnsNameLabel: staging-pauline-portfolio
+    dnsNameLabel: pauline-portfolio
     ports:
     - protocol: tcp
       port: 80
     - protocol: tcp
       port: 8000
 
-tags: {envTag: staging-pauline-portfolio}
+tags: {envTag: pauline-portfolio-prod}
 type: Microsoft.ContainerInstance/containerGroups
