--- a/.github/workflows/azure_deploy-prod.yml
+++ b/.github/workflows/azure_deploy-prod.yml
@@ -133,4 +133,4 @@ jobs:
       run: az container delete --resource-group pauline-RG-Brief15 --name PaulineContainerGroupPortfolio --yes
 
     - name: Deploy to Azure Container Instances
-      run: az container create --resource-group pauline-RG-Brief15 --file deploy-aci.yaml
+      run: az container create --resource-group pauline-RG-Brief15 --file deploy-aci-prod.yaml
