--- a/.github/workflows/azure_deploy-staging.yml
+++ b/.github/workflows/azure_deploy-staging.yml
@@ -87,7 +87,7 @@ jobs:
         find: "password.registry"
         replace: ${{ secrets.IMAGE_REGISTRY_PASSWORD }}
         regex: false
-        include: 'deploy-aci.yaml'
+        include: 'deploy-aci-dev.yaml'
     
     - name: Delete Previous Same Container Instances
       run: az container delete --resource-group pauline-RG-Brief15 --name StagingPaulineContainerGroupPortfolio --yes
